# advent-of-code-2024

./: README.md  manifest.toml
gleam/src/: advent_of_code.gleam
gleam/src/day2/: main.gleam
gleam/src/day3/: main.gleam  part_a.gleam  part_b.gleam
gleam/test/: advent_of_code_test.gleam
rust/aoc_2024/: Cargo.toml
rust/aoc_2024/benches/aoc/: main.rs
rust/aoc_2024/src/: event_handler.rs  gfx.rs  griddy.rs  lib.rs  list.rs  main.rs  point.rs  util.rs
rust/aoc_2024/src/days/: day04.rs  mod.rs
rust/aoc_2024/src/days/day04/: mod.rs  part_a.rs  part_b.rs
rust/aoc_2024/src/days/day05/: mod.rs  part_a.rs  part_b.rs
rust/aoc_2024/src/days/day06/: mod.rs  part_a.rs  part_b.rs
rust/aoc_2024/src/days/day07/: mod.rs  part_a.rs
rust/aoc_2024/src/days/day08/: mod.rs
rust/aoc_2024/src/days/day09/: mod.rs
rust/aoc_2024/src/days/day10/: mod.rs
rust/aoc_2024/src/days/day11/: mod.rs
rust/aoc_2024/src/days/day12/: mod.rs
rust/aoc_2024/src/days/day13/: mod.rs
rust/aoc_2024/src/days/day14/: mod.rs
src/: advent_of_code.gleam
src/day1/: day1.gleam
src/day2/: part_a.gleam  part_b.gleam
src/utils/: counter.gleam  file.gleam
