[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
color-eyre = "0.6.3"
crossterm = "0.28.1"
itertools = "0.13.0"
ratatui = "0.29.0"
tokio = { version = "1.42.0", features = ["full"] }
trait-variant = "0.1.2"
