[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
itertools = "0.13.0"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[[bench]]
name = "aoc"
harness = false